--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@elastic/elasticsearch": "^8.17.1",
     "argon2": "^0.41.1",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
