--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-themes": "^1.4.3",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "tcp-ping": "^0.1.1"
   }
 }
