--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@elastic/elasticsearch": "^8.17.1",
     "argon2": "^0.41.1",
     "axios": "^1.7.9",
+    "bull": "^4.16.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "exceljs": "^4.4.0",
